# ppocr_lite

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
ppocr_lite/: __init__.py  classification.py  detection.py  engine.py  models.py  pyproject.toml  recognition.py  structs.py  text_handling.py  utils.py
